--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,6 @@ along with semanticcms-autogit-taglib.  If not, see <http://www.gnu.org/licenses
 		<tag>HEAD</tag>
 	</scm>
 
-	<!-- TODO
 	<dependencies>
 		<dependency>
 			<groupId>javax</groupId>
@@ -55,10 +54,19 @@ along with semanticcms-autogit-taglib.  If not, see <http://www.gnu.org/licenses
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
+			<groupId>com.aoindustries</groupId>
+			<artifactId>ao-servlet-filter</artifactId>
+			<version>1.3</version>
+		</dependency>
+		<dependency>
 			<groupId>com.semanticcms</groupId>
 			<artifactId>semanticcms-autogit-model</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>com.semanticcms</groupId>
+			<artifactId>semanticcms-autogit-servlet</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
-	-->
 </project>
