--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,11 @@ along with semanticcms-autogit-taglib.  If not, see <http://www.gnu.org/licenses
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
+			<groupId>org.glassfish.web</groupId>
+			<artifactId>javax.servlet.jsp.jstl</artifactId>
+			<version>1.2.4</version>
+		</dependency>
+		<dependency>
 			<groupId>com.aoindustries</groupId>
 			<artifactId>ao-servlet-filter</artifactId>
 			<version>1.3</version>
