--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,11 @@ along with semanticcms-autogit-taglib.  If not, see <http://www.gnu.org/licenses
 			<version>1.2.4</version>
 		</dependency>
 		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>jquery</artifactId>
+			<version>2.2.4</version>
+		</dependency>
+		<dependency>
 			<groupId>com.aoindustries</groupId>
 			<artifactId>ao-servlet-filter</artifactId>
 			<version>1.3</version>
