--- a/pom.xml
+++ b/pom.xml
@@ -83,5 +83,10 @@ along with semanticcms-autogit-taglib.  If not, see <http://www.gnu.org/licenses
 			<artifactId>semanticcms-autogit-servlet</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>com.semanticcms</groupId>
+			<artifactId>semanticcms-core-servlet</artifactId>
+			<version>1.5-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 </project>
