--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@ along with semanticcms-autogit-taglib.  If not, see <http://www.gnu.org/licenses
 
 	<groupId>com.semanticcms</groupId>
 	<artifactId>semanticcms-autogit-taglib</artifactId>
-	<version>1.2-SNAPSHOT</version>
+	<version>1.2</version>
 	<packaging>jar</packaging>
 
 	<name>SemanticCMS AutoGit Taglib</name>
@@ -43,7 +43,7 @@ along with semanticcms-autogit-taglib.  If not, see <http://www.gnu.org/licenses
 		<connection>scm:git:git://github.com/aoindustries/semanticcms-autogit-taglib.git</connection>
 		<developerConnection>scm:git:git@github.com:aoindustries/semanticcms-autogit-taglib.git</developerConnection>
 		<url>http://github.com/aoindustries/semanticcms-autogit-taglib</url>
-		<tag>HEAD</tag>
+		<tag>semanticcms-autogit-taglib-1.2</tag>
 	</scm>
 
 	<dependencies>
