Creating project pages.

--- a/pom.xml
+++ b/pom.xml
@@ -65,7 +65,7 @@ along with semanticcms-autogit-taglib.  If not, see <http://www.gnu.org/licenses
 	/ <a target="_top" href="https://semanticcms.com/autogit/">AutoGit</a>
 	/ <a target="_top" href="https://semanticcms.com/autogit/taglib/">Taglib</a></h1>
 	<p style="margin-left: 1em; margin-right: 1em">
-		<a target="_top" href="https://semanticcms.com/">SemanticCMS</a> automatic Git in a JSP environment.
+		<a target="_top" href="https://semanticcms.com/autogit/">SemanticCMS automatic Git</a> in a JSP environment.
 	</p>
 	<div style="float:left; margin: 0 1em">
 		<h2 style="margin-top: 0em">Project Links</h2>
