--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@ along with semanticcms-autogit-taglib.  If not, see <http://www.gnu.org/licenses
 	<parent>
 		<groupId>com.semanticcms</groupId>
 		<artifactId>semanticcms-autogit</artifactId>
-		<version>1.3.1</version>
+		<version>1.3.2-SNAPSHOT</version>
 	</parent>
 
 	<groupId>com.semanticcms</groupId>
@@ -43,7 +43,7 @@ along with semanticcms-autogit-taglib.  If not, see <http://www.gnu.org/licenses
 	<scm>
 		<connection>scm:git:git://github.com/aoindustries/semanticcms-autogit-taglib.git</connection>
 		<developerConnection>scm:git:git@github.com:aoindustries/semanticcms-autogit-taglib.git</developerConnection>
-		<url>http://github.com/aoindustries/semanticcms-autogit-taglib</url>
+		<url>https://github.com/aoindustries/semanticcms-autogit-taglib</url>
 		<tag>HEAD</tag>
 	</scm>
 
@@ -154,32 +154,32 @@ along with semanticcms-autogit-taglib.  If not, see <http://www.gnu.org/licenses
 		<dependency>
 			<groupId>com.aoindustries</groupId>
 			<artifactId>ao-servlet-filter</artifactId>
-			<version>1.4.1</version>
+			<version>1.4.2-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.aoindustries</groupId>
 			<artifactId>ao-taglib</artifactId>
-			<version>2.2.0</version>
+			<version>2.2.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.semanticcms</groupId>
 			<artifactId>semanticcms-autogit-model</artifactId>
-			<version>1.4.1</version>
+			<version>1.4.2-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.semanticcms</groupId>
 			<artifactId>semanticcms-autogit-servlet</artifactId>
-			<version>1.3.1</version>
+			<version>1.3.2-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.semanticcms</groupId>
 			<artifactId>semanticcms-core-servlet</artifactId>
-			<version>1.9.0</version>
+			<version>1.9.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.semanticcms</groupId>
 			<artifactId>semanticcms-core-taglib</artifactId>
-			<version>1.8.0</version>
+			<version>1.8.1-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 </project>
