--- a/pom.xml
+++ b/pom.xml
@@ -36,13 +36,12 @@ along with semanticcms-autogit-taglib.  If not, see <http://www.gnu.org/licenses
 	<packaging>jar</packaging>
 
 	<properties>
-		<bookPath>/autogit/taglib</bookPath>
 		<shortTitle>Taglib</shortTitle>
 		<description.html><![CDATA[<a target="_top" href="https://semanticcms.com/autogit/">SemanticCMS automatic Git</a> in a JSP environment.]]></description.html>
 	</properties>
 
 	<name>SemanticCMS AutoGit Taglib</name>
-	<url>https://semanticcms.com${bookPath}/</url><!-- Can't inherit due to multi-module -->
+	<url>https://semanticcms.com/autogit/taglib/</url>
 	<description>SemanticCMS automatic Git in a JSP environment.</description>
 	<inceptionYear>2016</inceptionYear>
 
