--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@ along with semanticcms-autogit-taglib.  If not, see <http://www.gnu.org/licenses
 
 	<groupId>com.semanticcms</groupId>
 	<artifactId>semanticcms-autogit-taglib</artifactId>
-	<version>1.3.2-SNAPSHOT</version>
+	<version>1.3.2</version>
 	<packaging>jar</packaging>
 
 	<properties>
@@ -55,7 +55,7 @@ along with semanticcms-autogit-taglib.  If not, see <http://www.gnu.org/licenses
 		<connection>scm:git:git://github.com/aoindustries/${project.artifactId}.git</connection>
 		<developerConnection>scm:git:git@github.com:aoindustries/${project.artifactId}.git</developerConnection>
 		<url>https://github.com/aoindustries/${project.artifactId}</url>
-		<tag>HEAD</tag>
+		<tag>semanticcms-autogit-taglib-1.3.2</tag>
 	</scm>
 
 	<profiles>
