--- a/book/pom.xml
+++ b/book/pom.xml
@@ -87,7 +87,7 @@ along with semanticcms-autogit-taglib.  If not, see <http://www.gnu.org/licenses
 								<artifactItem>
 									<groupId>com.semanticcms</groupId>
 									<artifactId>semanticcms-autogit-taglib</artifactId>
-									<version>1.3.3-SNAPSHOT</version>
+									<version>1.3.3</version>
 									<type>jar</type>
 									<includes>META-INF/semanticcms-autogit.tld</includes>
 								</artifactItem>
@@ -216,13 +216,13 @@ along with semanticcms-autogit-taglib.  If not, see <http://www.gnu.org/licenses
 		<dependency>
 			<groupId>com.semanticcms</groupId>
 			<artifactId>semanticcms-tag-reference</artifactId>
-			<version>1.0.1-SNAPSHOT</version>
+			<version>1.0.1</version>
 		</dependency>
 		<!-- Dependency for dependencyversion-maven-plugin only -->
 		<dependency>
 			<groupId>com.semanticcms</groupId>
 			<artifactId>semanticcms-autogit-taglib</artifactId>
-			<version>1.3.3-SNAPSHOT</version>
+			<version>1.3.3</version>
 			<type>pom</type>
 			<scope>provided</scope>
 			<optional>true</optional>
