--- a/book/pom.xml
+++ b/book/pom.xml
@@ -33,7 +33,7 @@ along with semanticcms-autogit-taglib.  If not, see <http://www.gnu.org/licenses
 
 	<groupId>com.semanticcms</groupId>
 	<artifactId>semanticcms-autogit-taglib-book</artifactId>
-	<version>1.3.3</version>
+	<version>1.3.4-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<properties>
@@ -66,7 +66,7 @@ along with semanticcms-autogit-taglib.  If not, see <http://www.gnu.org/licenses
 		<connection>scm:git:git://github.com/aoindustries/${documented.artifactId}.git</connection>
 		<developerConnection>scm:git:git@github.com:aoindustries/${documented.artifactId}.git</developerConnection>
 		<url>${documented.scm.url}</url>
-		<tag>semanticcms-autogit-taglib-book-1.3.3</tag>
+		<tag>HEAD</tag>
 	</scm>
 
 	<build>
