--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,7 @@ along with semanticcms-autogit-taglib.  If not, see <http://www.gnu.org/licenses
 							<artifactId>maven-javadoc-plugin</artifactId>
 							<configuration>
 								<links>
+									<link>${javac.link.javaApi}</link>
 									<link>${javac.link.javaeeApi.6}</link>
 									<link>https://aoindustries.com/ao-servlet-filter/apidocs/</link>
 									<link>https://aoindustries.com/ao-taglib/apidocs/</link>
