--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@ along with semanticcms-autogit-taglib.  If not, see <http://www.gnu.org/licenses
 
 	<groupId>com.semanticcms</groupId>
 	<artifactId>semanticcms-autogit-taglib</artifactId>
-	<version>1.3.4-SNAPSHOT</version>
+	<version>1.3.4-validation-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<properties>
@@ -132,27 +132,27 @@ along with semanticcms-autogit-taglib.  If not, see <http://www.gnu.org/licenses
 		<dependency>
 			<groupId>com.aoindustries</groupId>
 			<artifactId>ao-servlet-filter</artifactId>
-			<version>1.5.0</version>
+			<version>1.5.1-validation-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.aoindustries</groupId>
 			<artifactId>ao-taglib</artifactId>
-			<version>2.3.1</version>
+			<version>2.3.2-validation-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.semanticcms</groupId>
 			<artifactId>semanticcms-autogit-model</artifactId>
-			<version>1.4.3</version>
+			<version>1.4.4-validation-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.semanticcms</groupId>
 			<artifactId>semanticcms-autogit-servlet</artifactId>
-			<version>1.3.3</version>
+			<version>1.3.4-validation-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.semanticcms</groupId>
 			<artifactId>semanticcms-core-servlet</artifactId>
-			<version>1.11.0</version>
+			<version>1.12.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.semanticcms</groupId>
