--- a/book/pom.xml
+++ b/book/pom.xml
@@ -33,7 +33,7 @@ along with semanticcms-autogit-taglib.  If not, see <http://www.gnu.org/licenses
 
 	<groupId>com.semanticcms</groupId>
 	<artifactId>semanticcms-autogit-taglib-book</artifactId>
-	<version>1.3.4-validation-SNAPSHOT</version>
+	<version>2.0.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<properties>
@@ -87,7 +87,7 @@ along with semanticcms-autogit-taglib.  If not, see <http://www.gnu.org/licenses
 								<artifactItem>
 									<groupId>com.semanticcms</groupId>
 									<artifactId>semanticcms-autogit-taglib</artifactId>
-									<version>1.3.3</version>
+									<version>2.0.0-SNAPSHOT</version>
 									<type>jar</type>
 									<includes>META-INF/semanticcms-autogit.tld</includes>
 								</artifactItem>
@@ -240,7 +240,7 @@ along with semanticcms-autogit-taglib.  If not, see <http://www.gnu.org/licenses
 		<dependency>
 			<groupId>com.semanticcms</groupId>
 			<artifactId>semanticcms-autogit-taglib</artifactId>
-			<version>1.3.4-validation-SNAPSHOT</version>
+			<version>2.0.0-SNAPSHOT</version>
 			<type>pom</type>
 			<scope>provided</scope>
 			<optional>true</optional>
