--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@ along with semanticcms-autogit-taglib.  If not, see <http://www.gnu.org/licenses
 
 	<groupId>com.semanticcms</groupId>
 	<artifactId>semanticcms-autogit-taglib</artifactId>
-	<version>1.3.4-validation-SNAPSHOT</version>
+	<version>2.0.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<properties>
@@ -75,7 +75,7 @@ along with semanticcms-autogit-taglib.  If not, see <http://www.gnu.org/licenses
 									<link>https://aoindustries.com/ao-taglib/apidocs/</link>
 									<link>https://semanticcms.com/autogit/model/apidocs/</link>
 									<link>https://semanticcms.com/autogit/servlet/apidocs/</link>
-									<link>https://semanticcms.com/core/servlet/apidocs/</link>
+									<link>https://semanticcms.com/core/renderer/html/apidocs/</link>
 									<link>https://semanticcms.com/core/taglib/apidocs/</link>
 								</links>
 							</configuration>
@@ -151,7 +151,7 @@ along with semanticcms-autogit-taglib.  If not, see <http://www.gnu.org/licenses
 		</dependency>
 		<dependency>
 			<groupId>com.semanticcms</groupId>
-			<artifactId>semanticcms-core-servlet</artifactId>
+			<artifactId>semanticcms-core-renderer-html</artifactId>
 			<version>2.0.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
