--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,10 @@ along with semanticcms-autogit-taglib.  If not, see <http://www.gnu.org/licenses
 				</exclusion>
 			</exclusions>
 		</dependency>
+		<!-- Open servlet firewall for /webjars/*** -->
+		<dependency>
+			<groupId>com.aoindustries</groupId><artifactId>ao-servlet-firewall-webjars</artifactId><version>1.0.0-SNAPSHOT</version>
+		</dependency>
 		<dependency>
 			<groupId>org.webjars</groupId><artifactId>jquery</artifactId><version>2.2.4</version>
 		</dependency>
