--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,7 @@ along with semanticcms-autogit-taglib.  If not, see <http://www.gnu.org/licenses
 								<links>
 									<link>${javac.link.javaApi}</link>
 									<link>${javac.link.javaeeApi.6}</link>
+									<link>https://aoindustries.com/ao-servlet-firewall/webjars/apidocs/</link>
 									<link>https://aoindustries.com/ao-servlet-filter/apidocs/</link>
 									<link>https://aoindustries.com/ao-taglib/apidocs/</link>
 									<link>https://semanticcms.com/autogit/model/apidocs/</link>
