--- a/pom.xml
+++ b/pom.xml
@@ -58,26 +58,24 @@ along with semanticcms-autogit-taglib.  If not, see <http://www.gnu.org/licenses
 		<profile>
 			<id>release</id>
 			<build>
-				<pluginManagement>
-					<plugins>
-						<plugin>
-							<groupId>org.apache.maven.plugins</groupId><artifactId>maven-javadoc-plugin</artifactId>
-							<configuration>
-								<links>
-									<link>${javac.link.javaApi}</link>
-									<link>${javac.link.javaeeApi.6}</link>
-									<link>https://aoindustries.com/ao-servlet-firewall/webjars/apidocs/</link>
-									<link>https://aoindustries.com/ao-servlet-filter/apidocs/</link>
-									<link>https://aoindustries.com/ao-taglib/apidocs/</link>
-									<link>https://semanticcms.com/autogit/model/apidocs/</link>
-									<link>https://semanticcms.com/autogit/servlet/apidocs/</link>
-									<link>https://semanticcms.com/core/renderer/html/apidocs/</link>
-									<link>https://semanticcms.com/core/taglib/apidocs/</link>
-								</links>
-							</configuration>
-						</plugin>
-					</plugins>
-				</pluginManagement>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId><artifactId>maven-javadoc-plugin</artifactId>
+						<configuration>
+							<links>
+								<link>${javac.link.javaApi}</link>
+								<link>${javac.link.javaeeApi.6}</link>
+								<link>https://aoindustries.com/ao-servlet-firewall/webjars/apidocs</link>
+								<link>https://aoindustries.com/ao-servlet-filter/apidocs</link>
+								<link>https://aoindustries.com/ao-taglib/apidocs</link>
+								<link>https://semanticcms.com/autogit/model/apidocs</link>
+								<link>https://semanticcms.com/autogit/servlet/apidocs</link>
+								<link>https://semanticcms.com/core/renderer/html/apidocs</link>
+								<link>https://semanticcms.com/core/taglib/apidocs</link>
+							</links>
+						</configuration>
+					</plugin>
+				</plugins>
 			</build>
 		</profile>
 	</profiles>
