--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 semanticcms-autogit-taglib - SemanticCMS automatic Git in a JSP environment.
-Copyright (C) 2016, 2017, 2018  AO Industries, Inc.
+Copyright (C) 2016, 2017, 2018, 2019  AO Industries, Inc.
     support@aoindustries.com
     7262 Bull Pen Cir
     Mobile, AL 36695
@@ -41,7 +41,7 @@ along with semanticcms-autogit-taglib.  If not, see <http://www.gnu.org/licenses
 		<javadoc.taglibReference><![CDATA[<li><a target="_top" href="${project.url}semanticcms-autogit.tld/">Taglib Reference</a></li>]]></javadoc.taglibReference>
 	</properties>
 
-	<name>SemanticCMS AutoGit Taglib</name>
+	<name>SemanticCMS 2 AutoGit Taglib</name>
 	<url>https://semanticcms.com/autogit/taglib/</url>
 	<description>SemanticCMS automatic Git in a JSP environment.</description>
 	<inceptionYear>2016</inceptionYear>
