--- a/book/pom.xml
+++ b/book/pom.xml
@@ -30,7 +30,7 @@ along with semanticcms-autogit-taglib.  If not, see <http://www.gnu.org/licenses
 	</parent>
 
 	<groupId>com.semanticcms</groupId><artifactId>semanticcms-autogit-taglib-book</artifactId><version>1.3.4-SNAPSHOT</version>
-	<packaging>jar</packaging>
+	<packaging>bundle</packaging>
 
 	<properties>
 		<!-- These values are copied from the project being documented -->
