--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@ along with semanticcms-autogit-taglib.  If not, see <http://www.gnu.org/licenses
 	</parent>
 
 	<groupId>com.semanticcms</groupId><artifactId>semanticcms-autogit-taglib</artifactId><version>1.3.4-SNAPSHOT</version>
-	<packaging>jar</packaging>
+	<packaging>bundle</packaging>
 
 	<properties>
 		<javadoc.breadcrumbs><![CDATA[<a target="_top" href="https://semanticcms.com/">SemanticCMS</a>
