--- a/book/pom.xml
+++ b/book/pom.xml
@@ -37,7 +37,7 @@ along with semanticcms-autogit-taglib.  If not, see <http://www.gnu.org/licenses
 		<documented.groupId>com.semanticcms</documented.groupId><documented.artifactId>semanticcms-autogit-taglib</documented.artifactId>
 		<documented.javaVersion>1.7</documented.javaVersion>
 		<documented.javac.link.javaApi>${javac.link.javaApi.jdk7}</documented.javac.link.javaApi>
-		<documented.name>SemanticCMS 1 AutoGit Taglib</documented.name>
+		<documented.name>SemanticCMS AutoGit Taglib</documented.name>
 		<documented.shortTitle>Taglib</documented.shortTitle>
 		<documented.url>https://semanticcms.com/autogit/taglib/</documented.url>
 		<documented.description>SemanticCMS automatic Git in a JSP environment.</documented.description>
