--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,7 @@ along with semanticcms-autogit-taglib.  If not, see <http://www.gnu.org/licenses
 		<javadoc.taglibReference><![CDATA[<li><a target="_top" href="${project.url}semanticcms-autogit.tld/">Taglib Reference</a></li>]]></javadoc.taglibReference>
 	</properties>
 
-	<name>SemanticCMS 1 AutoGit Taglib</name>
+	<name>SemanticCMS AutoGit Taglib</name>
 	<url>https://semanticcms.com/autogit/taglib/</url>
 	<description>SemanticCMS automatic Git in a JSP environment.</description>
 	<inceptionYear>2016</inceptionYear>
