--- a/book/pom.xml
+++ b/book/pom.xml
@@ -36,15 +36,15 @@ along with semanticcms-autogit-taglib.  If not, see <https://www.gnu.org/license
     <module.name>com.semanticcms.autogit.taglib.book</module.name>
     <!-- These values are copied from the project being documented -->
     <documented.artifactId>semanticcms-autogit-taglib</documented.artifactId>
-    <documented.name>SemanticCMS AutoGit Taglib²</documented.name>
+    <documented.name>SemanticCMS AutoGit Taglib</documented.name>
     <documented.description>SemanticCMS automatic Git in a JSP environment.</documented.description>
 
     <description.html><![CDATA[Documentation for <a target="${javadoc.target}" href="${project.url}">${documented.name}</a> in <a target="${javadoc.target}" href="https://semanticcms.com/">SemanticCMS</a> format.]]></description.html>
   </properties>
 
-  <name>SemanticCMS AutoGit Taglib² Book</name>
+  <name>SemanticCMS AutoGit Taglib Book</name>
   <url>https://semanticcms.com/autogit/taglib/</url>
-  <description>Documentation for SemanticCMS AutoGit Taglib² in SemanticCMS format.</description>
+  <description>Documentation for SemanticCMS AutoGit Taglib in SemanticCMS format.</description>
   <inceptionYear>2016</inceptionYear>
 
   <licenses>
